--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp and My name is Issac.
+           Enter the name :  <input type='text' id=textbox >
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
