[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
            Enter the name :  <input type='text' id=textbox >
+           <input type='button' id='counter' value='submit'>
         </div>
         <hr>
         <script type="text/javascript" src="/ui/main.js">
