[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-           Enter the name :  <input type='text' id=textbox >
+           The no of count : <span id='myspan'>0 times</span>
            <input type='button' id='counter' value='submit'>
         </div>
         <hr>
