--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <script type="text/javascript" src="/ui/main.js"></script>
     </head>
     <body>
         <div class="center">
@@ -13,7 +14,7 @@
            <input type='button' id='counter' value='submit'>
         </div>
         <hr>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        
+        
     </body>
 </html>
