[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-           The no of count : <span id='myspan'>0 times</span>
+           The no of count : <span id='myspan'>0</span> times
            <input type='button' id='counter' value='submit'>
         </div>
         <hr>
