[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <br>
         <div class="center text-big bold">
            The no of count : <span id='myspan'>0</span> times
-           <input type='button' id='counter' value='submit'>
+           <button id='counter'>submit</button>
         </div>
         <hr>
         <script type="text/javascript" src="/ui/main.js"></script>
